@@ -33,6 +33,7 @@ Please visit http://aegisub.net to download latest version
 - Fonts collector will now default collection to same folder as script (Set to "?script" on config.dat) (AMZ)
 - Alt+Left/Right on the video seek bar will now seek by increments of 10 frames (increment is customizeable in config.dat) (AMZ)
 - Added a simple audio resync method for video playback (AMZ)
+- Audio timing will now apply to all selected lines, as well as active line (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
